Web page modified

--- a/Assignments/Assignment 3/web700-app/views/about.html
+++ b/Assignments/Assignment 3/web700-app/views/about.html
@@ -4,11 +4,13 @@
 		<title>WEB700</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="style/mainStyle.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	</head>
 
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Student Name</a>
+			<a class="navbar-brand" href="https://www.linkedin.com/in/yasasrm" target="_blank">Yasas Maddumage  </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -20,9 +22,9 @@
 					<li class="nav-item"><a class="nav-link" href="/htmlDemo">Html Demo</a></li>
 				</ul>
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="/students">Students</a></li>
-					<li class="nav-item"><a class="nav-link" href="/tas">Teaching Assistants</a></li>
-					<li class="nav-item"><a class="nav-link" href="/courses">Courses</a></li>
+					<li class="nav-item"><a class="nav-link" href="/students" target="_blank">Students</a></li>
+					<li class="nav-item"><a class="nav-link" href="/tas" target="_blank">Teaching Assistants</a></li>
+					<li class="nav-item"><a class="nav-link" href="/courses" target="_blank">Courses</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -30,17 +32,35 @@
 		<div class="container">
 			<div class="row">
 				<main class="col-md-12">
-
-
-
 					<!-- Start your code here -->
-					
-					
-					
+					<h1>Welcome to the About Page!</h1>
+					<p>Thank you for visiting the About page. Here you can learn more about me and my academic journey.</p>
+
+					<h2>About Me</h2>
+					<p>
+						My name is Yasas Maddumage. I am a dedicated and results-driven Software Engineer with a proven track record in managing and executing critical IT projects. 
+						I've delivered innovative solutions, diagnosed and resolved system issues, and enhanced software development processes.
+						Currently I am following my postgraduate studies in Business Information Technology at Seneca Polytechnic. My student Number id 170308233.
+					</p>
+
+					<h2>Contact Information</h2>
+					<div class="contact-icons">
+						<a href="mailto:yrmaddumage@myseneca.ca">
+							<i class="fa-solid fa-envelope"></i> yrmaddumage@myseneca.ca
+						</a>
+						<a href="https://www.linkedin.com/in/yasasrm" target="_blank">
+							<i class="fa-brands fa-linkedin"></i> LinkedIn
+						</a>
+						<a href="https://github.com/Yasasrm" target="_blank">
+							<i class="fa-brands fa-github"></i> GitHub
+						</a>
+					</div>
+
+					<h2>Back to Home</h2>
+					<p>
+						You can return to the <a href="/">Home</a> page to continue exploring the website.
+					</p>
 					<!-- End your code here  -->
-
-
-
 				</main>
 			</div>
 		</div>
