--- a/Assignments/Assignment 3/web700-app/views/error.html
+++ b/Assignments/Assignment 3/web700-app/views/error.html
@@ -16,7 +16,7 @@
 			
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="/htmlDemo">Html Demo</a></li>
 				</ul>
@@ -31,26 +31,17 @@
 		<div class="container">
 			<div class="row">
 				<main class="col-md-12">
+
+
+
 					<!-- Start your code here -->
-					<h1>Welcome to my website</h1>
-					<p>I will be demonstrating HTML5 principles and techniques, as well as routing in Express. Explore the features of the website and how Express can handle different routes and views seamlessly.</p>
-
-					<h2>About this Website</h2>
-					<p>This site consists of 3 static views (Home, About, HTML Demo) as well as 5 dynamic routes that supply data. You can explore the following routes and views:</p>
-					<ul>
-						<li><a href="/">Home</a> - The page you are currently on.</li>
-						<li><a href="/about">About</a> - Learn more about this project.</li>
-						<li><a href="/html-demo">HTML Demo</a> - A demonstration of HTML5 elements.</li>
-						<li><a href="/students">All Students</a> - View all students in the database.</li>
-						<li><a href="/students?course=3">Students by Course</a> - View students in a Course (eg: course#03).</li>
-						<li><a href="/student/3">Student by Student Number</a> - View details for Student  (eg: StudentId#03).</li>
-						<li><a href="/tas">All Managers</a> - View all Teaching Assistants (TAs).</li>
-						<li><a href="/courses">All Courses</a> - View the list of all available courses.</li>
-					</ul>
-
-					<h2>HTML5 Overview</h2>
-					<p>This site utilizes <strong>HTML5</strong>, the latest version of the HTML markup language. HTML5 is used for structuring and presenting content on the World Wide Web. It introduces new elements and APIs that simplify web development and ensure better compatibility across different browsers and devices.</p>
+					
+					
+					
 					<!-- End your code here  -->
+
+
+
 				</main>
 			</div>
 		</div>
