bug fix: vercel path prefix changing

--- a/Assignments/Assignment 3/web700-app/views/error.html
+++ b/Assignments/Assignment 3/web700-app/views/error.html
@@ -31,17 +31,11 @@
 		<div class="container">
 			<div class="row">
 				<main class="col-md-12">
-
-
-
 					<!-- Start your code here -->
-					
-					
-					
+					<h1>404 - Page Not Found</h1>
+					<p>We're sorry, but the page you are looking for does not exist.</p>
+					<p>You can go back to the <a href="/">home page</a> or check the links in the navigation bar.</p>
 					<!-- End your code here  -->
-
-
-
 				</main>
 			</div>
 		</div>
