--- a/Assignments/Assignment 3/web700-app/views/style/mainStyle.css
+++ b/Assignments/Assignment 3/web700-app/views/style/mainStyle.css
@@ -30,7 +30,7 @@ table {
     margin-bottom: 20px;
 }
 table, th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
 }
 th, td {
     padding: 8px;
