--- a/Assignments/Assignment 3/web700-app/views/home.html
+++ b/Assignments/Assignment 3/web700-app/views/home.html
@@ -40,7 +40,7 @@
 					<ul>
 						<li><a href="/">Home</a> - The page you are currently on.</li>
 						<li><a href="/about">About</a> - Learn more about this project.</li>
-						<li><a href="/html-demo">HTML Demo</a> - A demonstration of HTML5 elements.</li>
+						<li><a href="/htmlDemo">HTML Demo</a> - A demonstration of HTML5 elements.</li>
 						<li><a href="/students">All Students</a> - View all students in the database.</li>
 						<li><a href="/students?course=3">Students by Course</a> - View students in a Course (eg: course#03).</li>
 						<li><a href="/student/3">Student by Student Number</a> - View details for Student  (eg: StudentId#03).</li>
