--- a/Assignments/Assignment 3/web700-app/views/home.html
+++ b/Assignments/Assignment 3/web700-app/views/home.html
@@ -41,11 +41,11 @@
 						<li><a href="/">Home</a> - The page you are currently on.</li>
 						<li><a href="/about">About</a> - Learn more about this project.</li>
 						<li><a href="/htmlDemo">HTML Demo</a> - A demonstration of HTML5 elements.</li>
-						<li><a href="/students">All Students</a> - View all students in the database.</li>
-						<li><a href="/students?course=3">Students by Course</a> - View students in a Course (eg: course#03).</li>
-						<li><a href="/student/3">Student by Student Number</a> - View details for Student  (eg: StudentId#03).</li>
-						<li><a href="/tas">All Managers</a> - View all Teaching Assistants (TAs).</li>
-						<li><a href="/courses">All Courses</a> - View the list of all available courses.</li>
+						<li><a href="/students" target="_blank">All Students</a> - View all students in the database.</li>
+						<li><a href="/students?course=3" target="_blank">Students by Course</a> - View students in a Course (eg: course#03).</li>
+						<li><a href="/student/3" target="_blank">Student by Student Number</a> - View details for Student  (eg: StudentId#03).</li>
+						<li><a href="/tas" target="_blank">All Managers</a> - View all Teaching Assistants (TAs).</li>
+						<li><a href="/courses" target="_blank">All Courses</a> - View the list of all available courses.</li>
 					</ul>
 
 					<h2>HTML5 Overview</h2>
