--- a/Assignments/Assignment 3/web700-app/views/htmlDemo.html
+++ b/Assignments/Assignment 3/web700-app/views/htmlDemo.html
@@ -4,7 +4,8 @@
 		<title>WEB700</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="style/mainStyle.css" />
+		<!-- <link rel="stylesheet" href="style/mainStyle.css" /> -->
+		<link rel="stylesheet" href="/css/theme.css">
 	</head>
 
 	<body>
@@ -38,67 +39,49 @@
 						<caption>Sample Table 1</caption>
 						<thead>
 							<tr>
-								<th>Header 1</th>
-								<th>Header 2</th>
-								<th>Header 3</th>
+								<th>First Name</th>
+								<th>Last Name</th>
+								<th>Email</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>Row 1 Col 1</td>
-								<td rowspan="2">Rowspan Example</td>
-								<td>Row 1 Col 3</td>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
 							</tr>
 							<tr>
-								<td>Row 2 Col 1</td>
-								<td>Row 2 Col 3</td>
-							</tr>
-							<tr>
-								<td colspan="3">Colspan Example</td>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
+							</tr><tr>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
+							</tr><tr>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
+							</tr><tr>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
+							</tr><tr>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
+							</tr><tr>
+								<td>fname</td>
+								<td>lname</td>
+								<td>email</td>
 							</tr>
 						</tbody>
-						<tfoot>
-							<tr>
-								<td colspan="3">Table Footer</td>
-							</tr>
-						</tfoot>
 					</table>
 
-					<table>
-						<caption>Sample Table 2</caption>
-						<thead>
-							<tr>
-								<th>Header A</th>
-								<th>Header B</th>
-								<th>Header C</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Row A1</td>
-								<td>Row A2</td>
-								<td>Row A3</td>
-							</tr>
-							<tr>
-								<td>Row B1</td>
-								<td>Row B2</td>
-								<td>Row B3</td>
-							</tr>
-							<tr>
-								<td>Row C1</td>
-								<td>Row C2</td>
-								<td>Row C3</td>
-							</tr>
-						</tbody>
-						<tfoot>
-							<tr>
-								<td colspan="3">Table 2 Footer</td>
-							</tr>
-						</tfoot>
-					</table>
-
-					<p>This section demonstrates the use of HTML tables, including table headers, footers, and spanning rows and columns using rowspan and colspan.</p>
-
+					<li class="nav-item">
+						<a class="nav-link" href="/students/add">Add Student</a>
+					</li>
+					
 					<h2>Lists</h2>
 					<ol>
 						<li>Ordered Item 1</li>
