--- a/Assignments/Assignment 3/web700-app/views/student.ejs
+++ b/Assignments/Assignment 3/web700-app/views/student.ejs
@@ -22,6 +22,56 @@
                             <input class="form-control" name="lastName" type="text" value="<%=student.lastName%>" />
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Email:</label>
+                            <input class="form-control" name="email" type="text" value="<%=student.email%>" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Address(street):</label>
+                            <input class="form-control" name="addressStreet" type="text" value="<%=student.addressStreet%>" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Address(city):</label>
+                            <input class="form-control" name="addressCity" type="text" value="<%=student.addressCity%>" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Address(province):</label>
+                            <input class="form-control" name="addressProvince" type="text" value="<%=student.addressProvince%>" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Status:</label>
+                            <select name="status" class="form-control">
+                                <option value="Full Time" 
+                                    <%= student.status ==='Full Time' ? 'selected' : '' %> >
+                                    Full Time
+                                </option>
+                                <option value="Part Time" 
+                                    <%= student.status ==='Part Time' ? 'selected' : '' %> >
+                                    Part Time
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label>Course:</label>
+                        <select name="course" class="form-control">
+                            <% courses.forEach(course => { %>
+                                <option value="<%= course.courseId %>" 
+                                    <%= course.courseId == student.course ? 'selected' : '' %> >
+                                    <%= course.courseCode %> - <%= course.courseDescription %>
+                                </option>
+                            <% }); %>
+                        </select>
+                    </div>
                 </div>
             </fieldset>
 
