--- a/Assignments/Assignment 6/web700-app/views/course.ejs
+++ b/Assignments/Assignment 6/web700-app/views/course.ejs
@@ -23,5 +23,10 @@
             <hr />
             <input type="submit" class="btn btn-primary float-right" value="Update Course" /><br /><br /><br />
         </form>
+        <hr />
+        <form method="post" action="/course/delete">
+            <input type="hidden" name="courseId" value="<%=course.courseId%>" />
+            <input type="submit" class="btn btn-danger float-right" value="Delete Course" />
+        </form>
     </div>
 </div>
